fixing whitespace

--- a/homepage.css
+++ b/homepage.css
@@ -1,4 +1,6 @@
-
+*{
+border: 1px solid red;
+}
 body{
 padding: 0;
 margin: 0;
@@ -80,7 +82,6 @@ position: relative;
 top: -25em;
 left: 1.5em;
 background-image: url('images/ned.jpg');
-border: 1px solid red;
 }
 
 #me:hover {
